adicionando a funcionalidade de criação de mapa pegando locallização

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,6 +51,12 @@
         <key>NSAllowsArbitraryLoads</key>
         <true/>
     </dict>
+
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Este app precisa acessar sua localização para mostrar o mapa.</string>
+
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Este app precisa acessar sua localização continuamente.</string>
     
 </dict>
 </plist>
