--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   flutter_dotenv: ^5.2.1
   provider: ^6.1.2
   email_validator: ^3.0.0
+  flutter_map: ^8.1.0
+  latlong2: ^0.9.1
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
