--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_map: ^8.1.0
   latlong2: ^0.9.1
   geolocator: ^13.0.2
+  internet_connection_checker: ^3.0.1
 
 dev_dependencies:
   flutter_test:
