--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   latlong2: ^0.9.1
   geolocator: ^13.0.2
   internet_connection_checker: ^3.0.1
+  dot_curved_bottom_nav: ^0.0.2
 
 dev_dependencies:
   flutter_test:
