implementando chat google gemini

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,11 @@ dependencies:
   geolocator: ^13.0.2
   internet_connection_checker: ^3.0.1
   dot_curved_bottom_nav: ^0.0.2
+  flutter_gemini: ^3.0.0
+  dash_chat_2: ^0.0.21
+  file_picker: ^9.1.0
+  image_picker: ^1.1.2
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
