--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   file_picker: ^9.1.0
   image_picker: ^1.1.2
   flutter_speed_dial: ^7.0.0
+  pinput: ^5.0.1
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +43,7 @@ flutter:
   assets:
     - .env
     - assets/images/
+    - assets/lotties/
 
   # fonts:
   #   - family: Schyler
