--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   pinput: ^5.0.1
   lottie: ^3.3.1
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
