--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,24 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   pinput: ^5.0.1
   lottie: ^3.3.1
+  flutter_native_splash: ^2.4.5
+  flutter_launcher_icons: ^0.14.3
   webview_flutter: ^4.10.0
+
+flutter_native_splash:
+  color: "#222E50"
+  image: "assets/images/write_techcontrol.png"
+  android: true
+  ios: true
+
+flutter_icons:
+  image_path: "assets/images/icone1024.jpg"
+  ios: true
+  remove_alpha_ios: true
+  android: "launcher_icon"
+  adaptive_icon_background: "#222E50"
+  adaptive_icon_foreground: "assets/images/icone1024.jpg"
+
 
 dev_dependencies:
   flutter_test:
