--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   flutter_dotenv: ^5.2.1
   provider: ^6.1.2
   email_validator: ^3.0.0
-  flutter_map: ^8.1.0
   latlong2: ^0.9.1
   geolocator: ^13.0.2
   internet_connection_checker: ^3.0.1
@@ -32,8 +31,11 @@ dependencies:
   flutter_native_splash: ^2.4.5
   flutter_launcher_icons: ^0.14.3
   webview_flutter: ^4.10.0
+  permission_handler: ^12.0.0+1
+  url_launcher: ^6.3.1
 
 flutter_native_splash:
+
   color: "#222E50"
   image: "assets/images/write_techcontrol.png"
   android: true
