--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,10 @@ dependencies:
   webview_flutter: ^4.10.0
   permission_handler: ^12.0.0+1
   url_launcher: ^6.3.1
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
 
 flutter_native_splash:
-
   color: "#222E50"
   image: "assets/images/write_techcontrol.png"
   android: true
