--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.3.1
   firebase_core: ^3.13.0
   firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.2.1
 
 flutter_native_splash:
   color: "#222E50"
